--- a/style.css
+++ b/style.css
@@ -1,4 +1,8 @@
-html, body{
+@font-face{
+  font-family: Arcade;
+  src: url(../../fonts/upheavtt.ttf)
+}
+html, body, p{
     margin: 0;
     padding: 0;
 }
@@ -7,41 +11,71 @@ html, body{
     flex-direction: column;
     background-image: url(img/bricks.png);
     height: 200px;
-    width: auto;
+    width: 100vw;
     align-items: center;
 }
 .hero-container {
     display: flex;
     flex-grow: 1;
-    width: 600px;
+    max-width: 1000px;
+    margin: 0 auto;
+    padding: 0 15px;
     color: #F9F871;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    padding: 0 15px;
 }
 .title{
-    font-size: 100px;
-    font-family: "Pixels";
-    padding: 0;
-    margin: 0;
+    font-size: 65px;
+    font-family: Arcade;
     animation-name: breathe;
     animation-duration: 2s;
     animation-timing-function: ease-in-out;
     animation-delay: 0;
     animation-iteration-count: infinite;
     animation-direction: alternate;
-  }
+    -webkit-text-stroke: 3px black;  
+    text-shadow: black 2px 2px 4px;
+}
 @keyframes breathe {
     0% {
-      font-size: 95px;
+      font-size: 65px;
     }
     
     50% {
-      font-size: 100px;
+      font-size: 75px;
     }
     
     100% {
-      font-size: 95px;
+      font-size: 65px;
     }
-  }
+}
+
+.content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-family: Arcade;
+  background-color: #494464;
+  color:#F9F871;
+  -webkit-text-stroke: 2px black;
+  font-size: 35px;  
+}
+.content-title{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 20px;
+  gap: 15px;
+  
+}
+.content-container{
+  display: flex;
+  flex-direction: row;
+  max-width: 1000px;
+}
+.left-content, .right-content {
+  width: 50vw;
+  display: flex;
+  justify-content: center;
+}
