--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ a{
     height: 200px;
     width: 100vw;
     align-items: center;
+    /* create the drop shadow effect */
+    filter: drop-shadow(0px 2px 10px #000000);
+
 }
 .hero-container {
     display: flex;
@@ -131,5 +134,5 @@ a{
   justify-content: center;
   margin-top: auto;
   -webkit-tap-highlight-color: transparent;
-  
+  filter: drop-shadow(0px 2px 10px #000000);
 }
