--- a/style.css
+++ b/style.css
@@ -15,13 +15,13 @@ body{
   flex-direction: column;
 }
 a{
-  -webkit-text-stroke: 2px black; /* WebKit/Blink browsers */
-  color: transparent; /* Hide the actual text color */
-  color:#F9F871; /* Set your desired link color */
-  text-decoration: none; /* Optional: Remove underline or other decorations */
-
-
-
+  -webkit-text-stroke: 2px black;
+  color: transparent;
+  color:#F9F871;
+  text-decoration: none;
+}
+button:active{
+  transform: translateY(-4px);
 }
 .hero-wrapper {
     display: flex;
